Upgrade Admin Panel UI/UX with Glassmorphism and GSAP animations

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -8,124 +8,170 @@
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono&display=swap"
-        rel="stylesheet">
+    <!-- GSAP for Micro-interactions -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
-                        mono: ['JetBrains Mono', 'monospace'],
-                    },
-                    colors: {
-                        brand: '#1e40af',
-                        dark: '#0f172a',
-                        panel: '#1e293b',
-                    }
-                }
-            }
-        }
-    </script>
     <style>
+        .glass-sidebar {
+            background: rgba(15, 23, 42, 0.4);
+            backdrop-filter: blur(40px);
+            -webkit-backdrop-filter: blur(40px);
+            border-right: 1px solid rgba(255, 255, 255, 0.05);
+        }
+
+        .glass-panel {
+            background: rgba(30, 41, 59, 0.2);
+            backdrop-filter: blur(25px);
+            -webkit-backdrop-filter: blur(25px);
+            border: 1px solid rgba(255, 255, 255, 0.05);
+            box-shadow: 0 40px 80px -20px rgba(0, 0, 0, 0.4);
+        }
+
         .sidebar-item-active {
-            background: rgba(30, 64, 175, 0.1);
-            border-left: 4px solid #3b82f6;
+            background: rgba(30, 64, 175, 0.2);
+            border-right: 4px solid #3b82f6;
             color: #fff;
         }
 
         .data-card {
-            background: linear-gradient(135deg, rgba(30, 41, 59, 1) 0%, rgba(15, 23, 42, 1) 100%);
+            background: rgba(30, 41, 59, 0.3);
+            backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.03);
+            transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+        }
+
+        .data-card:hover {
+            transform: translateY(-8px);
+            background: rgba(30, 41, 59, 0.5);
+            border-color: rgba(30, 64, 175, 0.3);
+            box-shadow: 0 50px 100px -20px rgba(0, 0, 0, 0.6);
+        }
+
+        /* Thematic Gradients */
+        .bg-matrix {
+            position: fixed;
+            inset: 0;
+            z-index: -1;
+            background: radial-gradient(circle at 100% 0%, #1e3a8a 0%, transparent 40%),
+                radial-gradient(circle at 0% 100%, #1e1b4b 0%, transparent 40%),
+                #020617;
+        }
+
+        .custom-scrollbar::-webkit-scrollbar {
+            width: 4px;
+        }
+
+        .custom-scrollbar::-webkit-scrollbar-track {
+            background: transparent;
+        }
+
+        .custom-scrollbar::-webkit-scrollbar-thumb {
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
         }
     </style>
 </head>
 
-<body class="bg-dark font-sans text-slate-300 antialiased overflow-hidden flex h-screen">
+<body class="bg-dark font-sans text-slate-300 antialiased overflow-hidden flex h-screen relative">
+
+    <div class="bg-matrix"></div>
 
     <!-- Sidebar Navigation -->
-    <aside class="w-72 bg-slate-900 border-r border-slate-800 flex flex-col">
-        <div class="p-8 border-b border-slate-800">
-            <div class="flex items-center gap-3 mb-2">
+    <aside class="w-80 glass-sidebar flex flex-col z-20" id="sidebar">
+        <div class="p-10 mb-8">
+            <div class="flex items-center gap-4 mb-3">
                 <div
-                    class="w-8 h-8 bg-brand rounded-lg flex items-center justify-center font-black text-white text-xs tracking-tighter">
+                    class="w-10 h-10 bg-brand rounded-2xl flex items-center justify-center font-black text-white text-sm tracking-tighter shadow-2xl shadow-brand/20">
                     CK</div>
-                <span class="text-white font-bold tracking-tight">STATION CONTROL</span>
+                <span class="text-white font-extrabold tracking-tighter text-xl uppercase italic">Station <span
+                        class="not-italic text-brand text-xs">C.</span></span>
             </div>
-            <p class="text-[10px] text-slate-500 font-bold uppercase tracking-widest pl-1">V2.4 ADMIN PANEL</p>
+            <div class="flex items-center gap-3">
+                <div class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></div>
+                <p class="text-[9px] text-slate-500 font-bold uppercase tracking-[0.3em]">SYSTEM CORE STABLE</p>
+            </div>
         </div>
 
-        <nav class="flex-1 py-8 px-4 space-y-1">
+        <nav class="flex-1 px-6 space-y-3">
             <a href="admin-dashboard.html"
-                class="sidebar-item-active flex items-center gap-4 px-6 py-4 rounded-xl font-bold text-sm transition-all">
-                <svg class="w-5 h-5 opacity-70" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                class="sidebar-item-active flex items-center gap-5 px-8 py-5 rounded-[24px] font-bold text-[10px] tracking-[0.2em] uppercase transition-all">
+                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M16 8v8m-4-5v5m-4-2v2m-2 4h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
                 </svg>
                 Overview
             </a>
             <a href="admin-bookings.html"
-                class="flex items-center gap-4 px-6 py-4 rounded-xl text-slate-500 hover:bg-slate-800 hover:text-white font-bold text-sm transition-all group">
-                <svg class="w-5 h-5 opacity-40 group-hover:opacity-100" fill="none" stroke="currentColor"
+                class="flex items-center gap-5 px-8 py-5 rounded-[24px] text-slate-500 hover:bg-white/5 hover:text-white font-bold text-[10px] tracking-[0.2em] uppercase transition-all group">
+                <svg class="w-4 h-4 opacity-40 group-hover:opacity-100" fill="none" stroke="currentColor"
                     viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M15 5v2m0 4v2m0 4v2M5 5a2 2 0 012-2h14a2 2 0 012 2v14a2 2 0 01-2 2H7a2 2 0 01-2-2V5z" />
                 </svg>
-                Global Bookings
+                Bookings
             </a>
             <a href="admin-flights.html"
-                class="flex items-center gap-4 px-6 py-4 rounded-xl text-slate-500 hover:bg-slate-800 hover:text-white font-bold text-sm transition-all group">
-                <svg class="w-5 h-5 opacity-40 group-hover:opacity-100" fill="none" stroke="currentColor"
+                class="flex items-center gap-5 px-8 py-5 rounded-[24px] text-slate-500 hover:bg-white/5 hover:text-white font-bold text-[10px] tracking-[0.2em] uppercase transition-all group">
+                <svg class="w-4 h-4 opacity-40 group-hover:opacity-100" fill="none" stroke="currentColor"
                     viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8" />
                 </svg>
-                Flight Asset Mgmt
+                Flights
             </a>
             <a href="admin-packages.html"
-                class="flex items-center gap-4 px-6 py-4 rounded-xl text-slate-500 hover:bg-slate-800 hover:text-white font-bold text-sm transition-all group">
-                <svg class="w-5 h-5 opacity-40 group-hover:opacity-100" fill="none" stroke="currentColor"
+                class="flex items-center gap-5 px-8 py-5 rounded-[24px] text-slate-500 hover:bg-white/5 hover:text-white font-bold text-[10px] tracking-[0.2em] uppercase transition-all group">
+                <svg class="w-4 h-4 opacity-40 group-hover:opacity-100" fill="none" stroke="currentColor"
                     viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
                 </svg>
-                Experience Packages
+                Packages
             </a>
         </nav>
 
-        <div class="p-8 border-t border-slate-800">
+        <div class="p-10 border-t border-white/5">
             <button onclick="logout()"
-                class="flex items-center gap-3 text-red-500 font-bold text-[10px] tracking-widest uppercase hover:text-red-400">
-                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                class="flex items-center gap-4 text-red-500 font-bold text-[9px] tracking-[0.3em] uppercase hover:text-red-400 group transition-colors">
+                <svg class="w-4 h-4 opacity-60 group-hover:opacity-100" fill="none" stroke="currentColor"
+                    viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
                 </svg>
-                De-authenticate
+                DE-AUTHENTICATE
             </button>
         </div>
     </aside>
 
     <!-- Main Content Area -->
-    <main class="flex-1 flex flex-col overflow-y-auto custom-scrollbar">
+    <main class="flex-1 flex flex-col overflow-y-auto custom-scrollbar relative z-10" id="main-content">
         <!-- Top Header Bar -->
         <header
-            class="h-20 bg-slate-900/50 backdrop-blur-xl border-b border-slate-800 flex items-center justify-between px-12 sticky top-0 z-10">
+            class="h-24 bg-slate-900/40 backdrop-blur-3xl border-b border-white/5 flex items-center justify-between px-16 sticky top-0 z-30">
             <div>
-                <h1 class="text-xl font-bold text-white tracking-tight uppercase">Control Center</h1>
+                <h1 class="text-2xl font-black text-white tracking-tighter uppercase italic" id="header-title">Control
+                    <span class="not-italic text-brand">Center.</span>
+                </h1>
             </div>
-            <div class="flex items-center gap-8">
+            <div class="flex items-center gap-10">
                 <div class="flex flex-col items-end">
-                    <span class="text-[8px] font-bold text-slate-500 uppercase tracking-widest">System Entropy</span>
-                    <span class="text-green-500 font-mono text-xs">STABLE // 0.04ms</span>
+                    <span class="text-[8px] font-bold text-slate-500 uppercase tracking-[0.3em]">System Latency</span>
+                    <span class="text-green-500 font-mono text-xs tracking-widest">STABLE // 0.00ms</span>
                 </div>
-                <div class="w-px h-8 bg-slate-800"></div>
-                <div class="flex items-center gap-4">
+                <div class="w-[1px] h-10 bg-white/5"></div>
+                <div class="flex items-center gap-6">
                     <div class="text-right">
-                        <div class="text-xs font-bold text-white">System Admin</div>
-                        <div class="text-[10px] text-slate-500 tracking-tighter font-mono">ID: 0x7F2A281</div>
+                        <div class="text-xs font-black text-white uppercase tracking-widest">Root Admin</div>
+                        <div class="text-[9px] text-slate-500 tracking-[0.2em] font-mono mt-1">ID: 0x7F2A281</div>
+                    </div>
+                    <div
+                        class="w-12 h-12 rounded-2xl bg-brand/10 border border-brand/30 flex items-center justify-center">
+                        <svg class="w-6 h-6 text-brand" fill="currentColor" viewBox="0 0 20 20">
+                            <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z"
+                                clip-rule="evenodd" />
+                        </svg>
                     </div>
                 </div>
             </div>
@@ -240,27 +286,32 @@
 
                 if (bookingQS.empty) {
                     table.innerHTML = '<tr><td colspan="5" class="py-12 text-center text-slate-700">NO LOGS RECORDED</td></tr>';
-                    return;
+                } else {
+                    bookingQS.forEach(doc => {
+                        const b = doc.data();
+                        const tr = document.createElement('tr');
+                        tr.className = "border-b border-white/5 hover:bg-white/5 transition-colors group opacity-0";
+                        tr.innerHTML = `
+                            <td class="py-6 pl-6 font-mono text-brand group-hover:text-blue-400 transition-colors uppercase">#${doc.id.substring(0, 8)}</td>
+                            <td class="py-6 text-white font-bold">${b.customer}</td>
+                            <td class="py-6 text-slate-400 font-mono text-[10px] tracking-wider uppercase">${b.itemName || 'Manual Entry'}</td>
+                            <td class="py-6 text-right font-black text-white">$${(b.price || 0).toLocaleString()}</td>
+                            <td class="py-6 pr-6 text-right">
+                                 <span class="inline-flex items-center gap-2 px-4 py-1.5 bg-green-500/10 text-green-500 rounded-full text-[9px] font-bold uppercase tracking-widest border border-green-500/20 shadow-lg shadow-green-500/5">
+                                    <span class="w-1.5 h-1.5 bg-green-500 rounded-full animate-pulse shadow-[0_0_8px_rgba(34,197,94,1)]"></span>
+                                    ${b.status || 'VERIFIED'}
+                                 </span>
+                            </td>
+                        `;
+                        table.appendChild(tr);
+                    });
                 }
 
-                bookingQS.forEach(doc => {
-                    const b = doc.data();
-                    const tr = document.createElement('tr');
-                    tr.className = "border-b border-slate-800/50 hover:bg-slate-800/30 transition-colors group";
-                    tr.innerHTML = `
-                        <td class="py-6 pl-4 font-mono text-brand group-hover:text-blue-400 transition-colors uppercase">#${doc.id.substring(0, 8)}</td>
-                        <td class="py-6 text-white font-bold">${b.customer}</td>
-                        <td class="py-6 text-slate-400 font-mono text-xs">${b.itemName || 'Manual Entry'}</td>
-                        <td class="py-6 text-right font-bold text-white">$${(b.price || 0).toLocaleString()}</td>
-                        <td class="py-6 pr-4 text-right">
-                             <span class="inline-flex items-center gap-2 px-3 py-1 bg-green-500/10 text-green-500 rounded-full text-[10px] font-bold uppercase tracking-wider">
-                                <span class="w-1.5 h-1.5 bg-green-500 rounded-full animate-pulse"></span>
-                                ${b.status || 'VERIFIED'}
-                             </span>
-                        </td>
-                    `;
-                    table.appendChild(tr);
-                });
+                // GSAP Animations
+                gsap.from("#sidebar", { x: -50, opacity: 0, duration: 1, ease: "power4.out" });
+                gsap.from("header", { y: -20, opacity: 0, duration: 1, ease: "power4.out", delay: 0.2 });
+                gsap.from(".data-card", { scale: 0.9, opacity: 0, duration: 0.8, stagger: 0.1, ease: "back.out(1.7)", delay: 0.4 });
+                gsap.to("#bookings-table tr", { opacity: 1, x: 0, duration: 0.5, stagger: 0.05, ease: "power2.out", delay: 0.6 });
 
             } catch (err) {
                 console.error(err);
