--- a/dashboard.html
+++ b/dashboard.html
@@ -8,48 +8,54 @@
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@700&display=swap"
-        rel="stylesheet">
+    <!-- GSAP for Micro-interactions -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
-                        serif: ['Playfair Display', 'serif'],
-                    },
-                    colors: {
-                        primary: '#1e40af',
-                        surface: '#fafafa',
-                    }
-                }
-            }
-        }
-    </script>
     <style>
         .glass-header {
-            background: rgba(255, 255, 255, 0.85);
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
+            background: rgba(255, 255, 255, 0.7);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+        }
+
+        .glass-panel {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(25px);
+            -webkit-backdrop-filter: blur(25px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            box-shadow: 0 50px 100px -20px rgba(0, 0, 0, 0.1);
         }
 
         .stat-card {
             transition: all 0.3s ease;
+            background: rgba(255, 255, 255, 0.82);
+            backdrop-filter: blur(10px);
         }
 
         .stat-card:hover {
             transform: translateY(-4px);
+            background: rgba(255, 255, 255, 1);
             box-shadow: 0 20px 40px -10px rgba(0, 0, 0, 0.05);
+        }
+
+        /* Thematic Gradients */
+        .bg-matrix {
+            position: fixed;
+            inset: 0;
+            z-index: -1;
+            background: radial-gradient(circle at 100% 0%, #eff6ff 0%, transparent 40%),
+                radial-gradient(circle at 0% 100%, #fff7ed 0%, transparent 40%),
+                #fafafa;
         }
     </style>
 </head>
 
-<body class="bg-[#fcfcfc] font-sans text-gray-900 antialiased overflow-x-hidden">
+<body class="bg-surface font-sans text-gray-900 antialiased overflow-x-hidden">
+
+    <div class="bg-matrix"></div>
 
     <!-- Header -->
-    <nav class="glass-header border-b border-gray-100 sticky top-0 z-50 h-20">
+    <nav class="glass-header border-b border-white/20 fixed top-0 w-full z-50 h-20">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
             <div class="flex justify-between items-center h-full">
                 <a href="index.html" class="flex-shrink-0 flex items-center gap-1 group">
@@ -60,7 +66,7 @@
 
                 <div class="flex items-center gap-6">
                     <div class="hidden sm:flex flex-col items-end">
-                        <span class="text-[10px] font-bold text-amber-500 uppercase tracking-widest">Platinum
+                        <span class="text-[9px] font-bold text-amber-500 uppercase tracking-[0.2em]">Platinum
                             Member</span>
                         <span class="text-sm font-bold">Johnathan Doe</span>
                     </div>
@@ -73,59 +79,61 @@
         </div>
     </nav>
 
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12 flex flex-col lg:flex-row gap-12">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-32 pb-12 flex flex-col lg:flex-row gap-12">
 
         <!-- Sidebar Navigation -->
-        <aside class="w-full lg:w-64 space-y-2">
-            <a href="#"
-                class="flex items-center gap-4 px-6 py-4 rounded-2xl bg-primary text-white font-bold shadow-xl shadow-primary/20 transition-all">
-                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M16 8v8m-4-5v5m-4-2v2m-2 4h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
-                </svg>
-                Overview
-            </a>
-            <a href="#"
-                class="flex items-center gap-4 px-6 py-4 rounded-2xl text-gray-500 hover:bg-gray-50 hover:text-black font-semibold transition-all">
-                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
-                </svg>
-                Trip History
-            </a>
-            <a href="#"
-                class="flex items-center gap-4 px-6 py-4 rounded-2xl text-gray-500 hover:bg-gray-50 hover:text-black font-semibold transition-all">
-                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
-                </svg>
-                Favorites
-            </a>
-            <a href="#"
-                class="flex items-center gap-4 px-6 py-4 rounded-2xl text-gray-500 hover:bg-gray-50 hover:text-black font-semibold transition-all">
-                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-                </svg>
-                Security
-            </a>
-            <div class="pt-10">
-                <button onclick="window.location.href='index.html'"
-                    class="w-full text-left px-6 text-red-400 font-bold text-xs uppercase tracking-widest hover:text-red-600 transition-colors">Terminate
-                    Session</button>
+        <aside class="w-full lg:w-64 space-y-6" id="dashboard-sidebar">
+            <div class="glass-panel p-6 rounded-[40px] space-y-3">
+                <a href="#"
+                    class="flex items-center gap-4 px-6 py-4 rounded-2xl bg-primary text-white font-bold shadow-xl shadow-primary/20 transition-all text-xs uppercase tracking-widest">
+                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M16 8v8m-4-5v5m-4-2v2m-2 4h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                    </svg>
+                    Overview
+                </a>
+                <a href="#"
+                    class="flex items-center gap-4 px-6 py-4 rounded-2xl text-gray-400 hover:bg-white/50 hover:text-black font-bold transition-all text-xs uppercase tracking-widest">
+                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                    </svg>
+                    Trip History
+                </a>
+                <a href="#"
+                    class="flex items-center gap-4 px-6 py-4 rounded-2xl text-gray-400 hover:bg-white/50 hover:text-black font-bold transition-all text-xs uppercase tracking-widest">
+                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+                    </svg>
+                    Favorites
+                </a>
+                <a href="#"
+                    class="flex items-center gap-4 px-6 py-4 rounded-2xl text-gray-400 hover:bg-white/50 hover:text-black font-bold transition-all text-xs uppercase tracking-widest">
+                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                    </svg>
+                    Security
+                </a>
+                <div class="pt-10 border-t border-white/20 mt-10">
+                    <button onclick="window.location.href='index.html'"
+                        class="w-full text-left px-6 text-red-400 font-bold text-[10px] uppercase tracking-[0.2em] hover:text-red-600 transition-colors">Terminate
+                        Session</button>
+                </div>
             </div>
         </aside>
 
         <!-- Main Content -->
-        <main class="flex-1 space-y-12">
+        <main class="flex-1 space-y-12" id="dashboard-main">
 
-            <header>
-                <h1 class="text-5xl font-serif font-bold italic mb-4">Member <span
+            <header id="dashboard-header">
+                <h1 class="text-6xl font-serif font-bold italic mb-6">Member <span
                         class="not-italic text-primary font-bold">Portal.</span></h1>
-                <p class="text-gray-400 font-medium">Welcome back, Johnathan. Your next departure is in <span
-                        class="text-primary font-bold">12 days</span>.</p>
+                <p class="text-gray-500 font-medium text-lg">Welcome back, Johnathan. Your next departure is in <span
+                        class="text-primary font-bold animate-pulse">12 days</span>.</p>
             </header>
 
             <!-- Quick Stats -->
