--- a/admin-login.html
+++ b/admin-login.html
@@ -8,94 +8,137 @@
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
-                    },
-                    colors: {
-                        brand: '#1e40af',
-                    }
-                }
-            }
-        }
-    </script>
-</head>
-
-<body class="bg-[#0f172a] font-sans text-slate-200 antialiased h-screen flex items-center justify-center p-6">
-
-    <div class="w-full max-w-[420px] space-y-8">
-        <!-- Logo Area -->
-        <div class="text-center">
-            <div
-                class="inline-flex items-center justify-center w-20 h-20 bg-brand/10 border border-brand/20 rounded-3xl mb-8">
-                <svg class="w-10 h-10 text-brand" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z" />
-                </svg>
-            </div>
-            <h1 class="text-3xl font-bold tracking-tighter text-white uppercase">Station Control</h1>
-            <p class="text-slate-500 font-medium mt-2 text-sm tracking-widest uppercase">Administrative Terminal v2.4
-            </p>
-        </div>
-
-        <!-- Login Panel -->
-        <div class="bg-slate-900/50 backdrop-blur-xl border border-slate-800 rounded-[32px] p-10 shadow-2xl">
-            <form id="adminForm" class="space-y-6">
-                <div class="space-y-2">
-                    <label class="text-[10px] font-bold text-slate-500 uppercase tracking-widest ml-4">Terminal
-                        ID</label>
-                    <input type="text" id="adminId" required placeholder="ADM-778"
-                        class="w-full bg-slate-950/50 border border-slate-800 rounded-2xl px-6 py-4 focus:border-brand focus:ring-4 focus:ring-brand/5 outline-none transition-all font-mono text-brand placeholder-slate-700">
-                </div>
-
-                <div class="space-y-2">
-                    <label class="text-[10px] font-bold text-slate-500 uppercase tracking-widest ml-4">Access
-                        Key</label>
-                    <input type="password" id="adminPass" required placeholder="••••••••"
-                        class="w-full bg-slate-950/50 border border-slate-800 rounded-2xl px-6 py-4 focus:border-brand focus:ring-4 focus:ring-brand/5 outline-none transition-all font-mono text-brand placeholder-slate-700">
-                </div>
-
-                <div class="pt-4">
-                    <button type="submit"
-                        class="w-full bg-brand hover:bg-blue-600 text-white font-bold py-5 rounded-2xl shadow-xl shadow-brand/20 transition-all active:scale-[0.98] tracking-widest text-xs uppercase">
-                        INITIATE HANDSHAKE
-                    </button>
-                </div>
-            </form>
-        </div>
-
-        <div class="text-center">
-            <a href="index.html"
-                class="text-[10px] font-bold text-slate-600 hover:text-slate-400 tracking-widest uppercase transition-colors">Abort
-                & Return to Public Site</a>
-        </div>
-    </div>
-
-    <!-- Security Overlay Decor -->
-    <div class="fixed inset-0 pointer-events-none border-[40px] border-slate-900/20 opacity-50"></div>
-    <div
-        class="fixed top-10 left-10 text-[8px] font-mono text-slate-800 tracking-widest uppercase vertical-text hidden lg:block">
-        SECURE ENCRYPTION ACTIVE // IP LOGGING ON</div>
+    <!-- GSAP for Micro-interactions -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
     <style>
+        .glass-panel {
+            background: rgba(15, 23, 42, 0.4);
+            backdrop-filter: blur(40px);
+            -webkit-backdrop-filter: blur(40px);
+            border: 1px solid rgba(255, 255, 255, 0.05);
+            box-shadow: 0 100px 150px -50px rgba(0, 0, 0, 0.5);
+        }
+
+        .input-dark {
+            background: rgba(2, 6, 23, 0.6);
+            border: 1px solid rgba(255, 255, 255, 0.05);
+            transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+        }
+
+        .input-dark:focus {
+            background: rgba(2, 6, 23, 0.9);
+            border-color: #1e40af;
+            box-shadow: 0 0 30px rgba(30, 64, 175, 0.2);
+        }
+
+        /* Thematic Gradients */
+        .bg-matrix {
+            position: fixed;
+            inset: 0;
+            z-index: -1;
+            background: radial-gradient(circle at 100% 0%, #1e3a8a 0%, transparent 40%),
+                radial-gradient(circle at 0% 100%, #1e1b4b 0%, transparent 40%),
+                #020617;
+        }
+
         .vertical-text {
             writing-mode: vertical-rl;
             transform: rotate(180deg);
         }
     </style>
+</head>
+
+<body
+    class="bg-dark font-sans text-slate-200 antialiased h-screen flex items-center justify-center p-6 relative overflow-hidden">
+
+    <div class="bg-matrix"></div>
+
+    <div class="w-full max-w-[480px] relative z-10" id="login-container">
+        <!-- Logo Area -->
+        <div class="text-center mb-16" id="logo-section">
+            <div
+                class="inline-flex items-center justify-center w-24 h-24 bg-brand/10 border border-brand/30 rounded-[32px] mb-10 shadow-2xl shadow-brand/20">
+                <svg class="w-12 h-12 text-brand" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
+                        d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z" />
+                </svg>
+            </div>
+            <h1 class="text-4xl font-extrabold tracking-tighter text-white uppercase italic">Station <span
+                    class="not-italic text-brand">Control.</span></h1>
+            <p class="text-slate-500 font-bold mt-4 text-[10px] tracking-[0.4em] uppercase opacity-60">Administrative
+                Node Tier-A</p>
+        </div>
+
+        <!-- Login Panel -->
+        <div class="glass-panel rounded-[64px] p-12 md:p-16 border-white/5 relative overflow-hidden" id="login-card">
+            <div
+                class="absolute top-0 left-0 w-full h-[1px] bg-gradient-to-r from-transparent via-brand/50 to-transparent">
+            </div>
+
+            <form id="adminForm" class="space-y-10">
+                <div class="space-y-3">
+                    <label class="text-[10px] font-bold text-slate-500 uppercase tracking-[0.3em] ml-6">Digital
+                        Signature</label>
+                    <input type="text" id="adminId" required placeholder="ADM-778"
+                        class="w-full input-dark rounded-[32px] px-10 py-6 focus:outline-none font-mono text-brand placeholder-slate-800 text-lg">
+                </div>
+
+                <div class="space-y-3">
+                    <label class="text-[10px] font-bold text-slate-500 uppercase tracking-[0.3em] ml-6">Access
+                        Key</label>
+                    <input type="password" id="adminPass" required placeholder="••••••••"
+                        class="w-full input-dark rounded-[32px] px-10 py-6 focus:outline-none font-mono text-brand placeholder-slate-800 text-lg">
+                </div>
+
+                <div class="pt-6">
+                    <button type="submit" id="auth-btn"
+                        class="w-full bg-brand hover:bg-blue-600 text-white font-bold py-7 rounded-[32px] shadow-2xl shadow-brand/30 transition-all active:scale-[0.98] tracking-[0.3em] text-[10px] uppercase group relative overflow-hidden">
+                        <span class="relative z-10">INITIATE HANDSHAKE</span>
+                        <div
+                            class="absolute inset-0 bg-gradient-to-r from-transparent via-white/10 to-transparent -translate-x-full group-hover:translate-x-full transition-transform duration-1000">
+                        </div>
+                    </button>
+                </div>
+            </form>
+
+            <div class="mt-12 text-center">
+                <a href="index.html"
+                    class="text-[9px] font-bold text-slate-600 hover:text-brand tracking-[0.3em] uppercase transition-colors inline-flex items-center gap-3">
+                    <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+                    </svg>
+                    ABORT MODULE
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Security Overlay Decor -->
+    <div class="fixed inset-0 pointer-events-none border-[60px] border-slate-900/40 opacity-20"></div>
+    <div
+        class="fixed top-20 left-20 text-[8px] font-mono text-slate-700 tracking-[0.5em] uppercase vertical-text hidden lg:block opacity-40">
+        ENCRYPTION // RSA-4096 // ACTIVE TRANSACTION LOGGING
+    </div>
 
     <script>
+        // GSAP Entrance
+        window.addEventListener('load', () => {
+            gsap.from("#logo-section", { opacity: 0, scale: 0.9, duration: 1.2, ease: "power4.out" });
+            gsap.from("#login-card", { opacity: 0, y: 50, duration: 1.5, ease: "power4.out", delay: 0.3 });
+            gsap.from(".vertical-text", { opacity: 0, x: -20, duration: 2, ease: "power2.out", delay: 1 });
+        });
+
         document.getElementById('adminForm').addEventListener('submit', function (e) {
             e.preventDefault();
             const id = document.getElementById('adminId').value.trim().toLowerCase();
-            const btn = e.target.querySelector('button');
+            const btn = document.getElementById('auth-btn');
 
-            btn.textContent = "VERIFYING ENCRYPTION...";
+            btn.innerHTML = `<span class="flex items-center justify-center gap-3">
+                <svg class="animate-spin h-4 w-4 text-white" fill="none" viewBox="0 0 24 24"><circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle><path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path></svg>
+                VERIFYING...
+            </span>`;
             btn.disabled = true;
 
             setTimeout(() => {
@@ -109,12 +152,13 @@
                     window.location.href = './admin-dashboard.html';
                 } else {
                     alert('ACCESS DENIED: STATION ID UNRECOGNIZED');
-                    btn.textContent = "INITIATE HANDSHAKE";
+                    btn.innerHTML = "INITIATE HANDSHAKE";
                     btn.disabled = false;
                 }
-            }, 1500);
+            }, 2000);
         });
     </script>
+</body>
 </body>
 
 </html>
