--- a/booking.html
+++ b/booking.html
@@ -8,44 +8,46 @@
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@700&display=swap"
-        rel="stylesheet">
-
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
-                        serif: ['Playfair Display', 'serif'],
-                    },
-                    colors: {
-                        primary: '#1e40af',
-                        surface: '#fafafa',
-                    }
-                }
-            }
-        }
-    </script>
+    <!-- GSAP for Micro-interactions -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
     <style>
         .glass-header {
-            background: rgba(255, 255, 255, 0.85);
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
+            background: rgba(255, 255, 255, 0.7);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+        }
+
+        .glass-panel {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(25px);
+            -webkit-backdrop-filter: blur(25px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            box-shadow: 0 50px 100px -20px rgba(0, 0, 0, 0.1);
         }
 
         .step-transition {
             transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+        }
+
+        /* Thematic Gradients */
+        .bg-matrix {
+            position: fixed;
+            inset: 0;
+            z-index: -1;
+            background: radial-gradient(circle at 100% 0%, #eff6ff 0%, transparent 40%),
+                radial-gradient(circle at 0% 100%, #fff7ed 0%, transparent 40%),
+                #fafafa;
         }
     </style>
 </head>
 
 <body class="bg-surface font-sans text-gray-900 antialiased overflow-x-hidden">
 
+    <div class="bg-matrix"></div>
+
     <!-- Simple Secure Header -->
-    <nav class="glass-header border-b border-gray-100 sticky top-0 z-50 h-20">
+    <nav class="glass-header border-b border-white/20 fixed top-0 w-full z-50 h-20">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
             <div class="flex justify-between items-center h-full">
                 <a href="index.html" class="flex-shrink-0 flex items-center gap-1">
@@ -53,54 +55,56 @@
                             class="text-primary">.</span></span>
                 </a>
 
-                <div class="flex items-center gap-3 text-gray-400 font-bold text-[10px] tracking-[0.2em]">
-                    <svg class="w-4 h-4 text-green-500" fill="currentColor" viewBox="0 0 20 20">
-                        <path fill-rule="evenodd"
-                            d="M2.166 4.999A11.954 11.954 0 0010 1.944 11.954 11.954 0 0017.834 5c.11.65.166 1.32.166 2.001 0 5.225-3.34 9.67-8 11.317C5.34 16.67 2 12.225 2 7c0-.682.057-1.35.166-2.001zm11.541 3.708a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-                            clip-rule="evenodd" />
-                    </svg>
-                    256-BIT ENCRYPTION ACTIVE
+                <div class="flex items-center gap-4 text-gray-400 font-bold text-[10px] tracking-[0.3em] uppercase">
+                    <div
+                        class="flex items-center gap-2 bg-green-50 text-green-600 px-4 py-2 rounded-full border border-green-100">
+                        <svg class="w-4 h-4 animate-pulse" fill="currentColor" viewBox="0 0 20 20">
+                            <path fill-rule="evenodd"
+                                d="M2.166 4.999A11.954 11.954 0 0010 1.944 11.954 11.954 0 0017.834 5c.11.65.166 1.32.166 2.001 0 5.225-3.34 9.67-8 11.317C5.34 16.67 2 12.225 2 7c0-.682.057-1.35.166-2.001zm11.541 3.708a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                                clip-rule="evenodd" />
+                        </svg>
+                        SECURE SYNC
+                    </div>
                 </div>
             </div>
         </div>
     </nav>
 
     <!-- Checkout Layout -->
-    <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
-        <div class="flex flex-col lg:flex-row gap-12 items-start">
+    <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-32">
+        <div class="flex flex-col lg:flex-row gap-16 items-start">
 
             <!-- Left: Form Steps -->
-            <div class="flex-1 w-full">
+            <div class="flex-1 w-full" id="booking-flow">
 
                 <!-- New Progress UI -->
-                <div class="flex justify-between mb-20 px-4">
-                    <div class="flex flex-col items-center gap-3 relative flex-1">
+                <div class="flex justify-between mb-24 px-4 relative max-w-xl mx-auto">
+                    <!-- Progress Line Backdrop -->
+                    <div class="absolute h-[2px] bg-gray-100 top-6 left-12 right-12 z-0"></div>
+
+                    <div class="flex flex-col items-center gap-4 relative z-10">
                         <div id="step-node-1"
-                            class="w-12 h-12 rounded-full bg-primary text-white flex items-center justify-center font-bold shadow-2xl shadow-primary/30 z-10 transition-all duration-500">
+                            class="w-12 h-12 rounded-full bg-primary text-white flex items-center justify-center font-bold shadow-2xl shadow-primary/30 transition-all duration-500 border-4 border-white">
                             1</div>
-                        <span class="text-[10px] font-bold tracking-widest uppercase text-gray-900">Identity</span>
-                        <div id="step-line-1"
-                            class="absolute h-[2px] bg-gray-100 top-6 left-1/2 w-full transition-all duration-500">
-                        </div>
+                        <span class="text-[9px] font-bold tracking-[0.2em] uppercase text-gray-900">IDENTITY</span>
                     </div>
-                    <div class="flex flex-col items-center gap-3 relative flex-1">
+
+                    <div class="flex flex-col items-center gap-4 relative z-10">
                         <div id="step-node-2"
-                            class="w-12 h-12 rounded-full bg-gray-100 text-gray-400 flex items-center justify-center font-bold z-10 transition-all duration-500">
+                            class="w-12 h-12 rounded-full bg-gray-100 text-gray-400 flex items-center justify-center font-bold transition-all duration-500 border-4 border-white">
                             2</div>
-                        <span class="text-[10px] font-bold tracking-widest uppercase text-gray-400">Security</span>
-                        <div id="step-line-2"
-                            class="absolute h-[2px] bg-gray-100 top-6 left-1/2 w-full transition-all duration-500">
-                        </div>
+                        <span class="text-[9px] font-bold tracking-[0.2em] uppercase text-gray-400">SECURITY</span>
                     </div>
-                    <div class="flex flex-col items-center gap-3 relative">
+
+                    <div class="flex flex-col items-center gap-4 relative z-10">
                         <div id="step-node-3"
-                            class="w-12 h-12 rounded-full bg-gray-100 text-gray-400 flex items-center justify-center font-bold z-10 transition-all duration-500">
+                            class="w-12 h-12 rounded-full bg-gray-100 text-gray-400 flex items-center justify-center font-bold transition-all duration-500 border-4 border-white">
                             3</div>
-                        <span class="text-[10px] font-bold tracking-widest uppercase text-gray-400">Boarding</span>
+                        <span class="text-[9px] font-bold tracking-[0.2em] uppercase text-gray-400">LOGISTICS</span>
                     </div>
                 </div>
 
-                <form id="booking-form">
+                <form id="booking-form" class="glass-panel p-10 md:p-16 rounded-[48px]">
 
                     <!-- STEP 1: TRAVELER -->
                     <div id="step-1" class="step-transition">
@@ -333,6 +337,12 @@
             }
         }
 
+        // GSAP Entrance
+        window.addEventListener('load', () => {
+            gsap.from("#booking-flow", { opacity: 0, x: -50, duration: 1.2, ease: "power4.out" });
+            gsap.from("aside", { opacity: 0, x: 50, duration: 1.2, ease: "power4.out", delay: 0.3 });
+        });
+
         function finalizeBooking() {
             const bookingData = {
                 customer: document.getElementById('fname').value + ' ' + document.getElementById('lname').value,
@@ -346,6 +356,7 @@
 
             db.collection("bookings").add(bookingData).then(() => {
                 goToStep(3);
+                gsap.from("#step-3", { scale: 0.9, opacity: 0, duration: 1, ease: "back.out(1.7)" });
             }).catch(err => {
                 alert("Payment gateway reached timeout. Please try again.");
             });
