--- a/login.html
+++ b/login.html
@@ -8,108 +8,108 @@
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@700&display=swap"
-        rel="stylesheet">
+    <!-- GSAP for Micro-interactions -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
-                        serif: ['Playfair Display', 'serif'],
-                    },
-                    colors: {
-                        primary: '#1e40af',
-                        surface: '#fafafa',
-                    }
-                }
-            }
+    <style>
+        .glass-panel {
+            background: rgba(255, 255, 255, 0.4);
+            backdrop-filter: blur(40px);
+            -webkit-backdrop-filter: blur(40px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            box-shadow: 0 100px 150px -50px rgba(0, 0, 0, 0.2);
         }
-    </script>
+
+        .input-glass {
+            background: rgba(255, 255, 255, 0.5);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+        }
+
+        .input-glass:focus {
+            background: rgba(255, 255, 255, 0.9);
+            box-shadow: 0 20px 40px -10px rgba(30, 64, 175, 0.1);
+        }
+
+        /* Thematic Gradients */
+        .bg-matrix {
+            position: fixed;
+            inset: 0;
+            z-index: -1;
+            background: radial-gradient(circle at 100% 0%, #eff6ff 0%, transparent 50%),
+                radial-gradient(circle at 0% 100%, #fff7ed 0%, transparent 50%),
+                #fafafa;
+        }
+    </style>
 </head>
 
 <body
     class="bg-surface font-sans text-gray-900 antialiased h-screen flex items-center justify-center p-6 relative overflow-hidden">
 
-    <!-- Abstract Background -->
-    <div class="absolute inset-0 z-0">
-        <div
-            class="absolute top-0 left-0 w-full h-full bg-[radial-gradient(circle_at_20%_20%,#eff6ff_0%,transparent_50%)]">
-        </div>
-        <div
-            class="absolute bottom-0 right-0 w-full h-full bg-[radial-gradient(circle_at_80%_80%,#fef3c7_0%,transparent_50%)] opacity-50">
-        </div>
-    </div>
+    <div class="bg-matrix"></div>
 
     <!-- Login Card -->
-    <div
-        class="w-full max-w-[480px] bg-white rounded-[48px] shadow-2xl overflow-hidden border border-gray-100 relative z-10 p-10 md:p-14">
+    <div class="w-full max-w-[500px] glass-panel rounded-[64px] relative z-10 p-12 md:p-16" id="login-card">
 
-        <div class="text-center mb-12">
+        <div class="text-center mb-16">
             <a href="index.html" class="inline-flex items-center gap-1 mb-10 group">
                 <span
                     class="text-4xl font-extrabold tracking-tighter text-gray-900 group-hover:text-primary transition-colors">CK<span
                         class="text-primary group-hover:text-amber-500 transition-colors">.</span></span>
             </a>
-            <h1 class="text-4xl font-serif font-bold text-gray-900 mb-4 italic">Welcome <span
-                    class="not-italic">Back.</span></h1>
-            <p class="text-gray-400 font-medium tracking-wide">Enter your secure credentials to manage your journeys.
-            </p>
+            <h1 class="text-5xl font-serif font-bold text-gray-900 mb-6 italic tracking-tight">Portal <span
+                    class="not-italic">Access.</span></h1>
+            <p class="text-gray-500 font-medium tracking-wide">Secure your credentials to synchronize logistics.</p>
         </div>
 
-        <form id="loginForm" class="space-y-8">
-            <div class="space-y-2">
-                <label class="text-[10px] font-bold text-gray-400 uppercase tracking-[0.2em] ml-4">Email
+        <form id="loginForm" class="space-y-10">
+            <div class="space-y-3">
+                <label class="text-[10px] font-bold text-gray-400 uppercase tracking-[0.3em] ml-6">Digital
                     Identifier</label>
                 <input type="email" required placeholder="name@domain.com"
-                    class="w-full bg-surface border border-gray-100 rounded-3xl px-8 py-5 focus:border-primary focus:bg-white focus:shadow-xl focus:shadow-primary/5 outline-none transition-all font-bold placeholder-gray-300">
+                    class="w-full input-glass rounded-[32px] px-10 py-6 focus:border-primary outline-none font-bold placeholder-gray-300">
             </div>
 
-            <div class="space-y-2">
-                <div class="flex justify-between items-center px-4">
-                    <label class="text-[10px] font-bold text-gray-400 uppercase tracking-[0.2em]">Security Key</label>
+            <div class="space-y-3">
+                <div class="flex justify-between items-center px-6">
+                    <label class="text-[10px] font-bold text-gray-400 uppercase tracking-[0.3em]">Security Key</label>
                     <a href="#"
-                        class="text-[10px] font-bold text-primary hover:text-black transition-colors underline tracking-widest uppercase">Lost
+                        class="text-[9px] font-bold text-primary hover:text-black transition-colors underline tracking-widest uppercase">Lost
                         Key?</a>
                 </div>
                 <input type="password" required placeholder="••••••••"
-                    class="w-full bg-surface border border-gray-100 rounded-3xl px-8 py-5 focus:border-primary focus:bg-white focus:shadow-xl focus:shadow-primary/5 outline-none transition-all font-bold placeholder-gray-300">
+                    class="w-full input-glass rounded-[32px] px-10 py-6 focus:border-primary outline-none font-bold placeholder-gray-300">
             </div>
 
-            <button type="submit"
-                class="w-full bg-primary hover:bg-black text-white font-bold py-6 rounded-3xl shadow-2xl shadow-primary/20 transition-all transform active:scale-[0.98] tracking-[0.2em] text-xs">
+            <button type="submit" id="auth-btn"
+                class="w-full bg-primary hover:bg-black text-white font-bold py-7 rounded-[32px] shadow-2xl shadow-primary/30 transition-all transform active:scale-[0.98] tracking-[0.2em] text-xs uppercase">
                 AUTHENTICATE
             </button>
         </form>
 
-        <div class="mt-10 mb-8">
+        <div class="mt-12 mb-10">
             <div class="relative">
                 <div class="absolute inset-0 flex items-center">
-                    <div class="w-full border-t border-gray-50"></div>
+                    <div class="w-full border-t border-white/40"></div>
                 </div>
-                <div class="relative flex justify-center text-[10px]"><span
-                        class="px-3 bg-white text-gray-400 font-bold uppercase tracking-[0.2em]">Social
-                        Integration</span></div>
+                <div class="relative flex justify-center text-[9px]">
+                    <span
+                        class="px-5 glass-panel py-1 rounded-full text-gray-400 font-bold uppercase tracking-[0.25em]">Cloud
+                        Integration</span>
+                </div>
             </div>
         </div>
 
         <button onclick="handleGoogleLogin()"
-            class="w-full border border-gray-100 py-5 rounded-3xl font-bold text-[10px] text-gray-700 hover:bg-gray-50 transition-all flex items-center justify-center gap-4 tracking-[0.2em] shadow-sm">
-            <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" class="w-4 h-4" alt="Google">
+            class="w-full bg-white/50 border border-white/20 py-6 rounded-[32px] font-bold text-[10px] text-gray-700 hover:bg-white transition-all flex items-center justify-center gap-5 tracking-[0.2em] shadow-sm uppercase">
+            <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" class="w-5 h-5" alt="Google">
             SIGN IN WITH GOOGLE
         </button>
 
-        <div class="mt-12 text-center">
-            <p class="text-sm text-gray-400">
-                New to the platform? <a href="#" class="text-primary font-bold hover:text-black transition-colors">Apply
-                    for Membership</a>
+        <div class="mt-16 text-center">
+            <p class="text-[10px] font-bold text-gray-400 uppercase tracking-widest">
+                New Partner? <a href="#" class="text-primary hover:text-black transition-colors">Request Access</a>
             </p>
-        </div>
-
-        <div class="mt-12 pt-8 border-t border-gray-50 flex items-center justify-center gap-4 grayscale opacity-30">
-            <span class="text-[8px] font-bold tracking-[0.3em] uppercase">Secured by CloudArmor IPX</span>
         </div>
     </div>
 
@@ -118,18 +118,34 @@
     <div class="fixed bottom-20 left-20 w-48 h-48 border-2 border-gray-100 rounded-full opacity-20"></div>
 
     <script>
+        // GSAP Entrance
+        window.addEventListener('load', () => {
+            gsap.from("#login-card", {
+                opacity: 0,
+                scale: 0.9,
+                y: 50,
+                duration: 1.5,
+                ease: "power4.out"
+            });
+        });
+
         document.getElementById('loginForm').addEventListener('submit', (e) => {
             e.preventDefault();
-            const btn = e.target.querySelector('button');
-            btn.textContent = "VERIFYING...";
+            const btn = document.getElementById('auth-btn');
+            btn.innerHTML = `<span class="flex items-center justify-center gap-3">
+                <svg class="animate-spin h-4 w-4 text-white" fill="none" viewBox="0 0 24 24"><circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle><path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path></svg>
+                VERIFYING...
+            </span>`;
             btn.disabled = true;
+
+            gsap.to(btn, { scale: 0.95, duration: 0.1 });
+
             setTimeout(() => {
                 window.location.href = 'index.html';
-            }, 1000);
+            }, 1500);
         });
 
         function handleGoogleLogin() {
-            // Mock redirect for premium flow
             window.location.href = 'index.html';
         }
     </script>
