--- a/packages.html
+++ b/packages.html
@@ -8,6 +8,8 @@
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- GSAP for Micro-interactions -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
@@ -30,9 +32,17 @@
     </script>
     <style>
         .glass-header {
-            background: rgba(255, 255, 255, 0.85);
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
+            background: rgba(255, 255, 255, 0.7);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+        }
+
+        .glass-panel {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(25px);
+            -webkit-backdrop-filter: blur(25px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            box-shadow: 0 50px 100px -20px rgba(0, 0, 0, 0.1);
         }
 
         .hover-lift {
@@ -47,13 +57,25 @@
         .text-balance {
             text-wrap: balance;
         }
+
+        /* Thematic Gradients */
+        .bg-matrix {
+            position: fixed;
+            inset: 0;
+            z-index: -1;
+            background: radial-gradient(circle at 100% 0%, #eff6ff 0%, transparent 40%),
+                radial-gradient(circle at 0% 100%, #fff7ed 0%, transparent 40%),
+                #fafafa;
+        }
     </style>
 </head>
 
 <body class="bg-surface font-sans text-gray-900 antialiased overflow-x-hidden">
 
+    <div class="bg-matrix"></div>
+
     <!-- Navbar -->
-    <nav class="glass-header border-b border-gray-100 sticky top-0 z-50 h-20">
+    <nav class="glass-header border-b border-white/20 fixed top-0 w-full z-50 h-20">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
             <div class="flex justify-between items-center h-full">
                 <div class="flex items-center gap-12">
@@ -70,9 +92,8 @@
                             class="text-gray-500 hover:text-black font-semibold text-sm tracking-wide transition-colors">FLIGHTS</a>
                         <a href="packages.html"
                             class="text-primary font-bold text-sm tracking-wide border-b-2 border-primary pb-1">PACKAGES</a>
-                        <a href="booking.html"
-                            class="text-gray-500 hover:text-black font-semibold text-sm tracking-wide transition-colors">MY
-                            TRIPS</a>
+                        <a href="login.html"
+                            class="text-gray-500 hover:text-black font-semibold text-sm tracking-wide transition-colors">PORTAL</a>
                     </div>
                 </div>
 
@@ -112,37 +133,36 @@
     </div>
 
     <!-- Header Section -->
-    <header class="bg-white pt-24 pb-16 border-b border-gray-50 relative overflow-hidden">
-        <!-- Abstract Decoration -->
-        <div class="absolute top-0 right-0 -mr-20 -mt-20 w-64 h-64 bg-blue-50 rounded-full blur-3xl opacity-50"></div>
-
+    <header class="pt-32 pb-16 relative overflow-hidden">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
-            <div class="max-w-3xl">
-                <div
-                    class="inline-flex items-center gap-2 bg-amber-50 text-amber-600 px-3 py-1 rounded-full text-[10px] font-bold tracking-widest mb-6">
-                    MEMBER EXCLUSIVE RATES
+            <div class="glass-panel p-12 rounded-[64px]" id="header-matrix">
+                <div class="max-w-3xl">
+                    <div
+                        class="inline-flex items-center gap-2 bg-amber-50 text-amber-600 px-3 py-1 rounded-full text-[10px] font-bold tracking-widest mb-8">
+                        MEMBER EXCLUSIVE RATES
+                    </div>
+                    <h1 class="text-5xl md:text-8xl font-serif font-bold text-gray-900 mb-8 leading-tight">
+                        Curated <span class="text-primary italic">Experiences.</span>
+                    </h1>
+                    <p class="text-xl text-gray-500 leading-relaxed max-w-xl">
+                        Hand-selected journeys that combine private flight logistics with the world's most sought-after
+                        hidden gems.
+                    </p>
                 </div>
-                <h1 class="text-5xl md:text-7xl font-serif font-bold text-gray-900 mb-6 leading-tight">
-                    Curated <span class="text-primary italic">Experiences.</span>
-                </h1>
-                <p class="text-xl text-gray-500 leading-relaxed max-w-xl">
-                    Hand-selected journeys that combine private flight logistics with the world's most sought-after
-                    hidden gems.
-                </p>
-            </div>
 
-            <!-- Filter Pills -->
-            <div class="flex gap-3 mt-12 overflow-x-auto no-scrollbar pb-2">
-                <button
-                    class="px-6 py-2.5 rounded-full bg-primary text-white text-xs font-bold tracking-widest whitespace-nowrap shadow-lg shadow-primary/25">ALL
-                    DESTINATIONS</button>
-                <button
-                    class="px-6 py-2.5 rounded-full bg-white border border-gray-200 text-gray-500 hover:border-primary hover:text-primary text-xs font-bold tracking-widest whitespace-nowrap transition-all">EUROPE</button>
-                <button
-                    class="px-6 py-2.5 rounded-full bg-white border border-gray-200 text-gray-500 hover:border-primary hover:text-primary text-xs font-bold tracking-widest whitespace-nowrap transition-all">ASIA
-                    PACIFIC</button>
-                <button
-                    class="px-6 py-2.5 rounded-full bg-white border border-gray-200 text-gray-500 hover:border-primary hover:text-primary text-xs font-bold tracking-widest whitespace-nowrap transition-all">AMERICAS</button>
+                <!-- Filter Pills -->
+                <div class="flex gap-4 mt-12 overflow-x-auto no-scrollbar pb-2">
+                    <button
+                        class="px-8 py-4 rounded-2xl bg-primary text-white text-[10px] font-bold tracking-[0.2em] whitespace-nowrap shadow-xl shadow-primary/25 uppercase">ALL
+                        DESTINATIONS</button>
+                    <button
+                        class="px-8 py-4 rounded-2xl bg-white border border-gray-100 text-gray-400 hover:border-primary hover:text-primary text-[10px] font-bold tracking-[0.2em] whitespace-nowrap transition-all uppercase">EUROPE</button>
+                    <button
+                        class="px-8 py-4 rounded-2xl bg-white border border-gray-100 text-gray-400 hover:border-primary hover:text-primary text-[10px] font-bold tracking-[0.2em] whitespace-nowrap transition-all uppercase">ASIA
+                        PACIFIC</button>
+                    <button
+                        class="px-8 py-4 rounded-2xl bg-white border border-gray-100 text-gray-400 hover:border-primary hover:text-primary text-[10px] font-bold tracking-[0.2em] whitespace-nowrap transition-all uppercase">AMERICAS</button>
+                </div>
             </div>
         </div>
     </header>
@@ -226,9 +246,19 @@
         const db = firebase.firestore();
         db.settings({ experimentalForceLongPolling: true });
 
-        function toggleMobileMenu() {
-            const menu = document.getElementById('mobile-menu');
-            menu.classList.toggle('translate-x-full');
+        // GSAP Animations
+        window.addEventListener('load', () => {
+            gsap.from("#header-matrix", { opacity: 0, y: 30, duration: 1, ease: "power4.out" });
+        });
+
+        function animateCards() {
+            gsap.from(".hover-lift", {
+                opacity: 0,
+                y: 50,
+                stagger: 0.1,
+                duration: 1,
+                ease: "power3.out"
+            });
         }
 
         db.collection("packages").get().then(qs => {
@@ -272,6 +302,7 @@
                     </div>
                 `;
             });
+            animateCards();
         }).catch(err => {
             console.error(err);
             document.getElementById('packages-container').innerHTML = `<div class="col-span-full py-20 text-center text-red-400">Connection error. Please refresh.</div>`;
